--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,7 @@
+colorama==0.4.6
 MouseInfo==0.1.3
 PyAutoGUI==0.9.54
+pyfiglet==1.0.2
 PyGetWindow==0.0.9
 PyMsgBox==1.0.9
 pynput==1.7.7
@@ -13,4 +15,5 @@ PyRect==0.2.0
 PyScreeze==0.1.30
 pytweening==1.2.0
 rubicon-objc==0.4.9
+scapy==2.5.0
 six==1.16.0
